--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 <html lang="en" class="tui-bg-purple-black">
     <body class="tui-bg-purple-black">
         <div class="tui-nav">
-          <span class="tui-datetime" data-format="y/M/d H:m:s"></span>
           <ul>
             <li class="tui-dropdown">
               <a href="https://praxor.wtf"><span class="red-168-text">H</span>ome</a>
@@ -74,10 +73,10 @@
             </fieldset>
           </div>
         </div>
-        <div class="tui-statusbar absolute blue-168">
+        <div class="tui-statusbar absolute">
+          <span class="tui-datetime" data-format="y/M/d H:m:s"></span>
           <ul>
-            <li>Test</li>
-            <li>One Mo' Time</li>
+            <li>Welcome, Administrator</li>
           </ul>
         </div>
     </body>
