--- a/404.html
+++ b/404.html
@@ -52,5 +52,11 @@
                 </fieldset>
             </div>
         </div>
-      </body>
+        <div class="tui-statusbar absolute">
+          <span class="tui-datetime" data-format="y/M/d H:m:s"></span>
+          <ul>
+            <li>Welcome, Administrator</li>
+          </ul>
+        </div>
+    </body>
 </html>
