--- a/friends.html
+++ b/friends.html
@@ -103,5 +103,11 @@
               </fieldset>
           </div>
       </div>
+      <div class="tui-statusbar absolute">
+        <span class="tui-datetime" data-format="y/M/d H:m:s"></span>
+        <ul>
+          <li>Welcome, Administrator</li>
+        </ul>
+      </div>
   </body>
 </html>
