very large intake of subtle information

--- a/friends.html
+++ b/friends.html
@@ -38,6 +38,9 @@
                 <li>
                   <a href="https://praxor.wtf/files">F<span class="red-168-text">i</span>les</a>
                 </li>
+                <li>
+                  <a href="https://praxor.wtf/games"><span class=red-168-text>G</span>ames</a>
+                </li>
               </ul>
             </div>
           <li class="tui-dropdown">
@@ -88,14 +91,6 @@
                       <li>- linux user</li>
                       <li>- probably the best person to go when you need linux</li>
                       <li>- he can [$ fetch] him some bitches</li>
-                  </ul>
-                  <br>
-                  <br>
-                  == 'Jacob' (KingJacob105) ==
-                  <ul>
-                      <li>- professional bedwars</li>
-                      <li>- no flex but that man has 10k final kills in bedwars</li>
-                      <li>- he also slept with my mother :(</li>
                   </ul>
                   <br>
                   <br>
