--- a/games.html
+++ b/games.html
@@ -7,22 +7,22 @@
     <script src="dist/tuicss.min.js"></script>
 <!-- Primary Meta Tags -->
 <meta name="title" content="Praxor's Website V3">
-<meta name="description" content="The h0me 0f sc0nes!">
+<meta name="description" content="Hey there, and welcome to my website!">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://praxor.wtf/">
 <meta property="og:title" content="Praxor's Website V3">
-<meta property="og:description" content="The h0me 0f sc0nes!">
+<meta property="og:description" content="Hey there, and welcome to my website!">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://praxor.wtf">
 <meta property="twitter:title" content="Praxor's Website V3">
-<meta property="twitter:description" content="The h0me 0f sc0nes!">
+<meta property="twitter:description" content="Hey there, and welcome to my website!">
 </head>
-<html lang="en" class="tui-bg-green-black">
-    <body class="tui-bg-green-black">
+<html lang="en" class="tui-bg-red-black">
+    <body class="tui-bg-red-black">
         <div class="tui-nav">
           <span class="tui-datetime" data-format="y/M/d H:m:s"></span>
           <ul>
@@ -48,30 +48,10 @@
           </ul>
         </div>
         <div class="center">
-            <div class="tui-window purple-168 top">
-                <fieldset class="tui-fieldset">
-                    <legend>About</legend>
-                    Throughout the years of my experience with coding, I, Praxor, has set out to go figure out a new meaning for the online world, so here I am with a full fledged website, built in HTML, CSS, and JS! The super-duper cool essentials to every website! This website took less than a day to create, so I hope you enjoy my lazy work!
-                </fieldset>
-            </div>
-            <br>
-            <div class="tui-window black-168" style="margin-top:25px">
-                <fieldset class="tui-fieldset">
-                    <legend>Credits</legend>
-                    This website was hosted using GitHub Pages and Cloudflare.<br>
-                    Repository: <a href="https://github.com/meowking5/praxor.wtf" style="color:blue;">https://github.com/meowking5/praxor.wtf</a>
-                    <br>
-                    <br>
-                    This website's design is built with some MS-DOS CSS design.<br>
-                    You can find it here: <a href="https://github.com/vinibiavatti1/TuiCss" style="color:blue;">https://github.com/vinibiavatti1/TuiCss</a>
-                </fieldset>
-            </div>
-            <br>
-            <div class="tui-window white-168 bottom" style="margin-top:25px">
-                <fieldset class="tui-fieldset">
-                    <legend>End</legend>
-                    Sadly you have reached the end of my website (for now).<br>
-                    Stay tuned for more!
+            <div class="tui-window black-168 top">
+                <fieldset class="tui-fieldset" style="color:yellow;">
+                    <legend>DEADZONE</legend>
+                    This page is in development. Come back soon!
                 </fieldset>
             </div>
         </div>
