--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                   <li>
                     <a href="https://praxor.wtf/files">F<span class="red-168-text">i</span>les</a>
                   </li>
+                  <li>
+                    <a href="https://praxor.wtf/games"><span class=red-168-text>G</span>ames</a>
+                  </li>
                 </ul>
               </div>
             <li class="tui-dropdown">
@@ -66,10 +69,17 @@
           <div class="tui-window black-168 bottom" style="margin-top:25px">
             <fieldset class="tui-fieldset">
               <legend>Quote of the Week (QOTW)</legend>
-              Week of Febuary 27:
+              Week of March 13:
               <br>
               <br>
-              "oh you switched domains" -macintoshing
+              <a href="https://praxor.69-420.club/7GZqLq2z" style="color: blue;">[funky screenshot about my game and related mischievious activities]</a>
+            </fieldset>
+          </div>
+          <br>
+          <div class="tui-window black-168 bottom" style="margin-top:25px">
+            <fieldset class="tui-fieldset">
+              <legend>Site Information</legend>
+              You may or may not be viewing this in a classroom somewhere on planet earth, but I will let you know that this site has !!NOTHING WRONG!! with it. Feel free to demonstrate this to your classmates as you wish.
             </fieldset>
           </div>
         </div>
