--- a/404.html
+++ b/404.html
@@ -39,18 +39,21 @@
                     <a href="https://praxor.wtf/files">F<span class="red-168-text">i</span>les</a>
                   </li>
                 </ul>
+                <li>
+                  <a href="https://praxor.wtf/games"><span class=red-168-text>G</span>ames</a>
+                </li>
               </div>
             <li class="tui-dropdown">
               <a href="https://praxor.wtf/about"><span class="red-168-text">A</span>bout</a>
           </ul>
         </div>
         <div class="center">
-            <div class="tui-window black-168 top">
-                <fieldset class="tui-fieldset" style="color:yellow;">
-                    <legend>DEADZONE</legend>
-                    403 - Forbidden (This page does not exist.)
-                </fieldset>
-            </div>
+          <div class="tui-window black-168 top">
+              <fieldset class="tui-fieldset" style="color:yellow;">
+                  <legend>DEADZONE</legend>
+                  403 - Forbidden (This page does not exist.)
+              </fieldset>
+          </div>
         </div>
     </body>
 </html>
