--- a/files.html
+++ b/files.html
@@ -39,6 +39,9 @@
                     <a href="https://praxor.wtf/files">F<span class="red-168-text">i</span>les</a>
                   </li>
                 </ul>
+                <li>
+                  <a href="https://praxor.wtf/games"><span class=red-168-text>G</span>ames</a>
+                </li>
               </div>
             <li class="tui-dropdown">
               <a href="https://praxor.wtf/about"><span class="red-168-text">A</span>bout</a>
