--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           <div class="tui-window black-168 bottom" style="margin-top:25px">
             <fieldset class="tui-fieldset">
               <legend>Quote of the Week (QOTW)</legend>
-              Week of March 13:
+              Week of April 1:
               <br>
               <br>
-              <a href="https://praxor.69-420.club/7GZqLq2z" style="color: blue;">[funky screenshot about my game and related mischievious activities]</a>
+              "i dont video game anymore" -macintoshing sad moments #14
             </fieldset>
           </div>
           <br>
