sure why not just completely remove the option to gone the page

--- a/404.html
+++ b/404.html
@@ -20,40 +20,12 @@
 <meta property="twitter:url" content="https://praxor.wtf">
 <meta property="twitter:title" content="Praxor's Website V3">
 <meta property="twitter:description" content="Hey there, and welcome to my website!">
+<style>
+  
+</style>
 </head>
-<html lang="en" class="tui-bg-red-black">
-    <body class="tui-bg-red-black">
-        <div class="tui-nav">
-          <span class="tui-datetime" data-format="y/M/d H:m:s"></span>
-          <ul>
-            <li class="tui-dropdown">
-              <a href="https://praxor.wtf"><span class="red-168-text">H</span>ome</a>
-            <li class="tui-dropdown">
-              <span class="red-168-text">E</span>xtras
-              <div class="tui-dropdown-content">
-                <ul>
-                  <li>
-                    <a href="https://praxor.wtf/friends"><span class="red-168-text">F</span>riends</a>
-                  </li>
-                  <li>
-                    <a href="https://praxor.wtf/files">F<span class="red-168-text">i</span>les</a>
-                  </li>
-                </ul>
-                <li>
-                  <a href="https://praxor.wtf/games"><span class=red-168-text>G</span>ames</a>
-                </li>
-              </div>
-            <li class="tui-dropdown">
-              <a href="https://praxor.wtf/about"><span class="red-168-text">A</span>bout</a>
-          </ul>
-        </div>
-        <div class="center">
-          <div class="tui-window black-168 top">
-              <fieldset class="tui-fieldset" style="color:yellow;">
-                  <legend>DEADZONE</legend>
-                  403 - Forbidden (This page does not exist.)
-              </fieldset>
-          </div>
-        </div>
-    </body>
+<html">
+  <body class="tui-bg-purple-black">
+    <h1 style="color:white;" class="center">No.</h1>
+  </body>
 </html>
