--- a/heartbroken/index.html
+++ b/heartbroken/index.html
@@ -21,8 +21,8 @@
 <meta property="twitter:title" content="Praxor's Website V3">
 <meta property="twitter:description" content="The h0me 0f sc0nes!">
 </head>
-<html lang="en" class="tui-bg-white-black">
-    <body class="tui-bg-white-black">
+<html lang="en" class="tui-bg-red-black">
+    <body class="tui-bg-red-black">
         <div class="tui-nav">
           <ul>
             <li class="tui-dropdown">
@@ -45,6 +45,14 @@
             <li class="tui-dropdown">
               <a href="https://praxor.wtf/about"><span class="red-168-text">A</span>bout</a>
           </ul>
+        </div>
+        <div class="center">
+            <div class="tui-window black-168 bottom" style="margin-top:50px">
+                <fieldset class="tui-fieldset">
+                    <legend>WARNING</legend>
+                    P- please don't hurt me... I just wanted friends...
+                </fieldset>
+            </div>
         </div>
     </body>
 </html>
