--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           <div class="tui-window black-168 bottom" style="margin-top:25px">
             <fieldset class="tui-fieldset">
               <legend>Quote of the Week (QOTW)</legend>
-              Week of April 1:
+              Week of June 12:
               <br>
               <br>
-              "i dont video game anymore" -macintoshing sad moments #14
+              "It was my milk." -StickOdyssey
             </fieldset>
           </div>
           <br>
