--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <head>
-    
+    <title>Praxor Website 4.0</title>
 </head>
 <html>
     <body>
+        <h1>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</h1>
+        <h2>Praxor's Website 4.0 in development..?</h2>
         <background>
 
         </background>
