--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <head>
+    <link href="styles/style.css" rel="stylesheet">
     <title>Praxor Website 4.0</title>
 </head>
 <html>
     <body>
-        <h1>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</h1>
-        <h2>Praxor's Website 4.0 in development..?</h2>
-        <background>
-
-        </background>
+        <center>
+            <h1>Praxor's Website 4.0</h1>
+            <h3>~~ The Final Build~~</h3>
+            <br>
+            <br>
+            <br>
+            <video width="352" height="480" controls>
+                    <source src="video.mov" type="video/mp4">
+                You blocked video playback on your browser!
+            </video>
+        </center>
     </body>
 </html>
