--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <head>
     <link href="styles/style.css" rel="stylesheet">
     <title>Praxor Website 4.0</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,700&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <html>
     <body>
         <center>
             <h1>Praxor's Website 4.0</h1>
-            <h3>~~ The Final Build~~</h3>
+            <h3>~~ The Final Build ~~</h3>
             <br>
             <br>
             <br>
