--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <br>
             <br>
             <video width="352" height="480" controls>
-                <source src="video.mov" type="video/mp4">
+                <source src="catttt.mp4" type="video/mp4">
                 You blocked video playback on your browser!
             </video>
         </center>
