--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
             <br>
             <br>
             <br>
-            <video width="718" height="708" controls>
-                <source src="catttt.mp4" type="video/mp4">
-                You blocked video playback on your browser!
-            </video>
+            <div class="tenor-gif-embed" data-postid="19354605" data-share-method="host" data-aspect-ratio="0.5625" data-width="100%"><a href="https://tenor.com/view/cat-cat-jumping-cat-excited-excited-dance-gif-19354605">Cat Cat Jumping GIF</a></div>
         </center>
     </body>
 </html>
