--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <br>
             <br>
             <br>
-            <div class="tenor-gif-embed" data-postid="19354605" data-share-method="host" data-aspect-ratio="0.5625" data-width="100%"><a href="https://tenor.com/view/cat-cat-jumping-cat-excited-excited-dance-gif-19354605">Cat Cat Jumping GIF</a></div>
+            <image src="https://c.tenor.com/arqlNu8gyJYAAAAC/cat-cat-jumping.gif"></image>
         </center>
     </body>
 </html>
