--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <br>
             <br>
             <br>
-            <image src="./catttt.mp4"></image>
+            <video href="./catttt.mp4"></video>
         </center>
     </body>
 </html>
