the astonishing finale

--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
 <html>
     <body>
         <center>
-            <h1>Praxor's Website 4.0</h1>
-            <h3>~~ The Final Build ~~</h3>
-            <br>
-            <br>
-            <br>
-            <video href="./catttt.mp4"></video>
+            <h1 style="color:white;">I'm dead, digital death that is.</h1>
+            <hr>
+            <p>That's all folks.</p>
         </center>
     </body>
 </html>
