--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link href="styles/style.css" rel="stylesheet">
-    <title>Praxor Website 4.0</title>
+    <title>Gone.</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,700&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
