--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <body>
         <center>
             <h1 style="color:white;">I'm dead, digital death that is.</h1>
-            <hr>
-            <p>That's all folks.</p>
+            <footer style="color:rgb(31,31,31)">That's all folks.</footer>
         </center>
     </body>
 </html>
