--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <html>
     <body>
         <center>
-            <h1 style="color:white;">I REALLY WANNA BEAT MY DICK</h1>
-            <footer style="color:rgb(31,31,31)">sowwy x3</footer>
+            <h1 style="color:white;">Praxor's Website v6</h1>
+            <footer style="color:white">Coming in later updates.</footer>
         </center>
     </body>
 </html>
