--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <html>
     <body>
         <center>
-            <h1 style="color:white;">Praxor's Website v6</h1>
-            <footer style="color:white">Coming in later updates.</footer>
+            <h1 style="color:white;">Praxor</h1>
+            <hr>
+            <footer style="color:white">Himself</footer>
         </center>
     </body>
 </html>
