cool website part 7

--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <head>
     <link href="./style.css" rel="stylesheet">
-    <title>Gone.</title>
+    <title>Praxor | Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,700&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
-    <link href="./oraxor.png" rel="icon">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@600&display=swap" rel="stylesheet">
 </head>
 <html>
     <body>
         <center>
-            <h1 style="color:white;">Praxor</h1>
-            <hr>
-            <footer style="color:white">Himself</footer>
+            <div id="title">
+                <h1 style="padding: 15px">Praxor's Cool Sexy Website!</h1>
+            </div>
+            <hr style="width:69%;">
+            <h2>" 私は戦争が大好きです "</h2>
+            <hr style="width:69%;">
+            <div id="body" style="padding: 30px;">
+                <h2>Praxor is daddy, praxor is life.</h2>
+                <a href="https://discord.gg/rjZHDCT2MW" target="_blank"><h3 style="background: linear-gradient(90deg, rgba(10,10,20,1) 0%, rgba(50,50,100,1) 100%);border-radius: 20px;padding: 7px">Join the Praxor Discord Server!</h3></a>
+            </div>
+            <video controls>
+                <source src="catttt.mp4"type="video/mp4">
+                HOW DO YOU NOT HAVE VIDEO PLAYBACK ENABLED?! (Video support not supported)
+            </video>
+            <footer style="text-align-last: center">
+                <p>Discord: praxor#4945</p>
+            </footer>
         </center>
     </body>
 </html>
