--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <source src="catttt.mp4"type="video/mp4">
                 HOW DO YOU NOT HAVE VIDEO PLAYBACK ENABLED?! (Video support not supported)
             </video>
-            <footer style="text-align-last: center">
-                <p>Discord: praxor#4945</p>
+            <footer style="text-align-last: center;padding: 5px">
+                <p>Discord: praxor#4945 | © Praxor Industry</p>
             </footer>
         </center>
     </body>
