--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <hr style="width:69%;">
             <div id="body" style="padding: 30px;">
                 <h2>Praxor is daddy, praxor is life.</h2>
-                <a href="https://discord.gg/rjZHDCT2MW" target="_blank"><h3 style="background: linear-gradient(90deg, rgba(10,10,20,1) 0%, rgba(50,50,100,1) 100%);border-radius: 20px;padding: 7px;width:40%;text-decoration: none">Join the Praxor Discord Server!</h3></a>
+                <a href="https://discord.gg/rjZHDCT2MW" target="_blank" style="text-decoration: none;"><h3 style="background: linear-gradient(90deg, rgba(10,10,20,1) 0%, rgba(50,50,100,1) 100%);border-radius: 20px;padding: 7px;width:40%">Join the Praxor Discord Server!</h3></a>
             </div>
             <video controls>
                 <source src="catttt.mp4"type="video/mp4">
