--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./oraxor.png">
-    <meta name="description" content="PRAXOR IS SO SEXY WOO HOO SEX SEX SEX SEX SEX">
+    <meta name="description" content="PRAXOR IS SO SEXY WOO HOO SEX SEX SEX **SEX** ***SEX***">
     <meta property="og:title" content="Praxor | Home">
     <meta property="og:site_name" content="praxor.wtf">
     <meta property="og:url" content="https://praxor.wtf">
-    <meta property="og:description" content="PRAXOR IS SO SEXY WOO HOO SEX SEX SEX SEX SEX">
+    <meta property="og:description" content="PRAXOR IS SO SEXY WOO HOO SEX SEX SEX **SEX** ***SEX***">
     <meta property="og:type" content="website">
     <meta property="og:image" content="">
 </head>
