--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
             <hr style="width:69%;">
             <h2>" 私は戦争が大好きです "</h2>
             <hr style="width:69%;">
-            <div id="body" style="padding: 30px;">
-                <h2>Praxor is daddy, praxor is life.</h2>
+            <div id="body" style="padding: 5px;">
+                <h2>Praxor is love, praxor is life.</h2>
                 <a href="https://discord.gg/rjZHDCT2MW" target="_blank" style="text-decoration: none;"><h3 style="background: linear-gradient(90deg, rgba(10,10,20,1) 0%, rgba(50,50,100,1) 100%);border-radius: 20px;padding: 7px;width:40%">Join the Praxor Discord Server!</h3></a>
+                <a href="https://www.youtube.com/channel/UCGdB3wD8KAJKucB84BzVtbg" target="_blank" style="text-decoration: none;"><h3 style="background: linear-gradient(90deg, rgba(10,10,20,1) 0%, rgba(50,50,100,1) 100%);border-radius: 20px;padding: 7px;width:40%">Visit the Praxor YouTube Channel!</h3></a>
+                <a href="https://twitch.tv/praxorlive" target="_blank" style="text-decoration: none;"><h3 style="background: linear-gradient(90deg, rgba(10,10,20,1) 0%, rgba(50,50,100,1) 100%);border-radius: 20px;padding: 7px;width:40%">Visit the Praxor Twitch Channel!</h3></a>
             </div>
-            <video controls>
-                <source src="catttt.mp4"type="video/mp4">
-                HOW DO YOU NOT HAVE VIDEO PLAYBACK ENABLED?! (Video support not supported)
-            </video>
             <footer style="text-align-last: center;padding: 5px">
                 <p>Discord: praxor#4945 | © Praxor Industry</p>
             </footer>
