--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <center>
             <div id="title">
-                <h1 style="padding: 15px">Praxor's Cool Sexy Website!</h1>
+                <h1 style="padding: 15px">Praxor's Cool and Amazing Website!</h1>
             </div>
             <hr style="width:69%;">
             <h2>" 私は戦争が大好きです "</h2>
