--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <center>
                 <h1 style="padding:10px;">Hello, everyone!</h1>
                 <hr width="">
-                <p style="padding:4px;">It has recently come to my attention that my website has been stolen. While I try my hardest to conjure up a new design, after recently having to delete my old website, PLEASE do note that I am currently working with school issues and I could potentially just start using this as a file server link. Goodbye for now, as I continue to be who I am currently. Stuck.</p>
+                <p style="padding:4px;">It has recently come to my attention that my website has been stolen. While I try my hardest to conjure up a new design, after having to remove my old website changes, do note that I am currently trying to fix my school issues and I could potentially just start using this front-end for different purposes. See you later, alligator. After a while, crocodile.</p>
             </center>
         </div>
         <div>
