super duper important update
best website design low keys!

--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
     <head>
         <title>The Praxor Website</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div style="width:69%;" class="deadCenter">
-            <center>
-                <h1 style="padding:10px;">PRAXOR IS COOL</h1>
-                <hr width="">
-                <p style="padding:4px;">It has recently come to my attention that my website has been stolen. While I try my hardest to conjure up a new design, after having to remove my old website changes, do note that I am currently trying to fix my school issues and I could potentially just start using this front-end for different purposes. See you later, alligator. After a while, crocodile.</p>
-            </center>
-        </div>
         <div>
-            <footer>404: Not Found</footer>
+            <h1>Praxor</h1>
         </div>
     </body>
 </html>
