--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@300&display=swap" rel="stylesheet">
         <link rel="icon" href="./oraxor.png">
+        <meta charset="UTF-8">
+        <meta name="description" content="This is the ultimate praxor website!">
+        <meta name="keywords" content="We love casting spells!">
+        <meta name="author" content="Praxor">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div>
