--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     </head>
     <body>
         <div>
-            <h1>Praxor</h1>
+            <center>
+                <a style="text-decoration:none;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="oraxor.png" width="500px" height="100px;"></a>
+            </center>
         </div>
     </body>
 </html>
