--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div>
             <center>
                 <a style="text-decoration:none;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="oraxor.png" width="500px" height="100px;"></a>
+                <div class="flier"><img src="oraxor.png" width="100px" height="100px;"></div>
+                <a target="_blank" href="help.txt" style="text-decoration: none;"><p style="color:#616161">(Click me!)</p></a>
             </center>
         </div>
     </body>
