--- a/index.html
+++ b/index.html
@@ -8,11 +8,27 @@
         <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@300&display=swap" rel="stylesheet">
         <link rel="icon" href="./oraxor.png">
         <meta charset="UTF-8">
-        <meta name="description" content="This is the ultimate praxor website!">
+        <meta name="description" content="yo i'm praxor
+this is my website
+i made in like 3 minut
+support me so i can run it:
+https://ko-fi.com/praxor">
         <meta name="keywords" content="We love casting spells!">
         <meta name="author" content="Praxor">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="title" content="The Praxor Website">
+        <meta name="color" content="#6822b3">
+        <meta name="footer" content="Some Praxor Website">
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QG3XY96ZGN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-QG3XY96ZGN');
+    </script>
     <body>
         <div>
             <center>
@@ -22,7 +38,7 @@
                         <img src="oraxor.png" width="100px">
                     </a>
                 </div>
-                <a target="_blank" href="help.txt" style="text-decoration: none;"><p style="color:#616161">--> (Click me!) <-- </p></a>
+                <a target="_blank" href="help.txt" style="text-decoration: none;"><p style="color:#616161;background-color:rgba(37,37,37,100);background-blend-mode: saturation;padding:5px">CLICK ME!! </p></a>
             </center>
         </div>
         <script>
