--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@ this is my website
 i made in like 3 minut
 support me so i can run it:
 https://ko-fi.com/praxor">
-        <meta name="keywords" content="We love casting spells!">
+        <meta name="keywords" content="praxor">
+        <meta content="https://praxor.wtf/praxor1.png" property="og:image">
         <meta name="author" content="Praxor">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="title" content="The Praxor Website">
-        <meta name="color" content="#6822b3">
-        <meta name="footer" content="Some Praxor Website">
+        <meta content="#6822b3" data-react-helmet="true" name="theme-color">
+        <meta name="og:footer" content="Some Praxor Website">
     </head>
-    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QG3XY96ZGN"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
