--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ https://ko-fi.com/praxor">
         <meta content="#6822b3" data-react-helmet="true" name="theme-color">
         <meta name="og:footer" content="Some Praxor Website">
     </head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5987617200084551"
+     crossorigin="anonymous"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QG3XY96ZGN"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
