--- a/index.html
+++ b/index.html
@@ -65,19 +65,11 @@ window.__h82AlnkH6D91__("WyJwdWItNTk4NzYxNzIwMDA4NDU1MSIsW251bGwsbnVsbCxudWxsLCJ
       gtag('config', 'G-QG3XY96ZGN');
     </script>
     <body>
-        <div>
-            <center>
-                <a style="text-decoration:none;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="oraxor.png" width="500px" height="100px;"></a>
-                <div class="flier">
-                    <a onclick="meowMeow.play();">
-                        <img src="oraxor.png" width="100px">
-                    </a>
-                </div>
-                <a target="_blank" href="help.txt" style="text-decoration: none;"><p style="color:#616161;background-color:rgba(37,37,37,100);background-blend-mode: saturation;padding:5px">CLICK ME!! </p></a>
-            </center>
-        </div>
-        <script>
-            var meowMeow = new Audio('mewmewmew.wav');
-        </script>
+        <center>
+            <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="#111" class="bi bi-tools" viewBox="0 0 16 16">
+            <path d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.27 3.27a.997.997 0 0 0 1.414 0l1.586-1.586a.997.997 0 0 0 0-1.414l-3.27-3.27a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3c0-.269-.035-.53-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814L1 0Zm9.646 10.646a.5.5 0 0 1 .708 0l2.914 2.915a.5.5 0 0 1-.707.707l-2.915-2.914a.5.5 0 0 1 0-.708ZM3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026L3 11Z"/>
+        </svg>
+        </center>
+        <h3 style="background-color:#111;padding:14px;border:10px;border-radius:10px;border-color:#666;">This website is under construction.</h3>
     </body>
 </html>
