--- a/home/index.html
+++ b/home/index.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="https://praxor.wtf/home">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#" id="alreadyHome">Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Stuff</a>
@@ -106,13 +106,45 @@
                         <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
                     </a>
                     <ul class="nav col-md-4 justify-content-end">
-                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" id="alreadyHome2">Home</a></li>
                         <li class="nav-item"><a href="https://praxor.wtf/socials" class="nav-link px-2 text-body-secondary">Socials</a></li>
                         <li class="nav-item"><a href="https://praxor.wtf/about" class="nav-link px-2 text-body-secondary">About</a></li>
                     </ul>
                 </footer>
             </div>
+            <div class="toast-container position-fixed bottom-0 end-0 p-3">
+                <div id="alreadyHomeToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="toast-header">
+                        <img src="https://praxor.wtf/oraxor.png" width="16" height="16" class="rounded me-2" alt="praxor website logo">
+                        <strong class="me-auto">The Praxor Website</strong>
+                        <small>now</small>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                    <div class="toast-body">
+                        You're already on the home page!
+                    </div>
+                </div>
+            </div>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+        <script>
+            const toastTrigger = document.getElementById('alreadyHome')
+            const toastTrigger2 = document.getElementById('alreadyHome2')
+            const alreadyHomeToast = document.getElementById('alreadyHomeToast')
+            const alreadyHomeToast2 = document.getElementById('alreadyHomeToast')
+
+            if (toastTrigger) {
+                const toastBootstrap = bootstrap.Toast.getOrCreateInstance(alreadyHomeToast)
+                toastTrigger.addEventListener('click', () => {
+                    toastBootstrap.show()
+              })
+            }
+            if (toastTrigger2) {
+                const toastBootstrap = bootstrap.Toast.getOrCreateInstance(alreadyHomeToast)
+                toastTrigger2.addEventListener('click', () => {
+                    toastBootstrap.show()
+                })
+            }
+        </script>
     </body>
 </html>
